--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -5,10 +5,15 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/authentication/" method="post">
+    
+    <h2>Sign up</h2>
+    <form method="post">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
+        {{ form.as_p }}
+        <button type="submit">Sign up</button>
     </form>
+    {% endblock %}
+    
+    
 </body>
 </html>
